Tour search broken style fix | margin to block

--- a/public/sass/_block.scss
+++ b/public/sass/_block.scss
@@ -246,7 +246,6 @@
                  }
              }
              .g-form-control{
-                 padding: 0 100px;
                  margin: 50px 0 0;
                  @media(max-width: 990px){
                      padding: 0;
